# cell-temp-diff

./: README.md  app_demo.py  pyproject.toml  requirements.txt  中天温差对比-ES.ipynb
data/: ThingsBoardDevice.csv  扩容电表.csv
jupyter_notebook/: EA项目衰减计算.ipynb  ThingsBoard数据分析.ipynb  ThingsBoard设备监控.ipynb  天辰扩容后电量修正.ipynb  工控机数据归类.ipynb  电芯一致性分析-压差.ipynb  电芯一致性分析-电量.ipynb
jupyter_notebook/.ipynb_checkpoints/: 电芯一致性分析-压差-checkpoint.ipynb  电芯一致性分析-电量-checkpoint.ipynb
