[tool.poetry]
name = "jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["Void"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
pandas = "^2.2.0"
plotly = "^5.18.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
